@@ -253,19 +253,13 @@ namespace libtorrent
 	{
 		rate_limited_udp_socket(io_service& ios, connection_queue& cc);
 		void set_rate_limit(int limit) { m_rate_limit = limit; }
-		bool can_send() const { return int(m_queue.size()) >= m_queue_size_limit; }
 		bool send(udp::endpoint const& ep, char const* p, int len, error_code& ec, int flags = 0);
-		void close();
 
 	private:
-		void on_tick(error_code const& e);
 
-		deadline_timer m_timer;
-		int m_queue_size_limit;
 		int m_rate_limit;
 		int m_quota;
 		ptime m_last_tick;
-		std::deque<queued_packet> m_queue;
 	};
 }
 
